2002-01-17  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-link-desktop-file.c 
	(nautilus_link_desktop_file_get_link_uri_from_desktop): 
	Free the type string.

	* src/nautilus-view-frame.c (nautilus_view_frame_selection_changed): 
	Call CORBA_free on uri_list.
	(send_history): Call CORBA_free on history.

	* src/nautilus-bookmark-parsing.c (nautilus_bookmark_new_from_node): 
	free icon_mime_type.

	* src/file-manager/fm-icon-view.c (update_layout_menus): free path.

	* src/file-manager/Makefile.am: Add fm-list-model.[ch]

	* src/file-manager/fm-list-model.c: New file.

	* src/file-manager/fm-list-model.h: New file.

	* src/file-manager/fm-list-view.c: Port to GtkTreeView.

	* src/file-manager/fm-list-view.h: Port to GtkTreeView.

	* src/file-manager/fm-directory-view.c (fm_directory_view_destroy):
	Stop and clear the directory view before setting view to NULL because
	clearing the directory when nautilus_view is NULL can trigger an assertion.
	
2002-01-17  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-mime-actions.c: Added include
	needed for compatibility with new gnome-vfs.

	* src/file-manager/fm-directory-view.c:
	(set_up_scripts_directory_global): Fix mistake with use of
	GNOME_DOT_GNOME by using gnome_util_home_file instead.

2002-01-16  Darin Adler  <darin@bentspoon.com>

	* components/hardware/main.c: (main):
	* components/image-viewer/nautilus-image-view.c:
	(init_server_factory):
	* components/loser/content/main.c: (main):
	* components/loser/sidebar/main.c: (main):
	* components/throbber/main.c: (main):
	* libnautilus/nautilus-view-standard-main.c:
	(nautilus_view_standard_main_multi),
	(nautilus_view_create_from_get_type_function):
	* src/nautilus-main.c: (main):
	Remove unneeded code and restore display-specific registration.
	This gets rid of a bunch of GNOME2_CONVERSION_COMPLETE ifdefs.

	* libnautilus-private/nautilus-directory-metafile-monitor.h:
	* libnautilus-private/nautilus-metafile-factory.c: