@@ -35,6 +35,7 @@
 #include "nautilus-link.h"
 #include "nautilus-search-uri.h"
 #include <eel/eel-string.h>
+#include <libgnomevfs/gnome-vfs-ops.h>
 #include <libxml/parser.h>
 #include <libxml/xmlmemory.h>
 #include <gtk/gtkmain.h>
@@ -2916,7 +2917,17 @@ make_dot_directory_uri (const char *uri)
 	}
 	
 	dot_dir_vfs_uri = gnome_vfs_uri_append_file_name (vfs_uri, ".directory");
-	dot_directory_uri = gnome_vfs_uri_to_string (dot_dir_vfs_uri, GNOME_VFS_URI_HIDE_NONE);
+
+	/* This does sync I/O but is allowed here since otherwise nautilus won't start showing the
+	 * directory's contents before all the scheduled calls of "look for .directory file" have been
+	 * finished. 
+	 */
+	if (gnome_vfs_uri_is_local (dot_dir_vfs_uri) && gnome_vfs_uri_exists (dot_dir_vfs_uri)) {
+		dot_directory_uri = gnome_vfs_uri_to_string (dot_dir_vfs_uri, GNOME_VFS_URI_HIDE_NONE);
+	}
+	else {
+		dot_directory_uri = NULL;
+	}
 	
 	gnome_vfs_uri_unref (vfs_uri);
 	gnome_vfs_uri_unref (dot_dir_vfs_uri);
