@@ -1,5 +1,16 @@
 2002-01-17  Anders Carlsson  <andersca@gnu.org>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	(nautilus_icon_canvas_item_update_bounds),
+	(draw_or_measure_label_text), (update_label_layouts),
+	(get_label_layout), (draw_label_layout), (draw_label_layout_aa),
+	(draw_or_measure_label_text_aa), (nautilus_icon_canvas_item_event):
+	Add non-aa pango support.
+	
+	* libnautilus-private/nautilus-directory-async.c (make_dot_directory_uri): 
+	Do an sync check for the .directory file before scheduling an async read 
+	of the file.
+
 	* libnautilus-private/nautilus-link-desktop-file.c 
 	(nautilus_link_desktop_file_get_link_uri_from_desktop): 
 	Free the type string.
